{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 74,
  "lineage": "02850d9c-16f6-cd7f-4164-6551d1169691",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:internet-gateway/igw-0f0ca2993d334c4a3",
            "id": "igw-0f0ca2993d334c4a3",
            "owner_id": "942872595618",
            "tags": {
              "Name": "DEVOPS16 project - Gateway"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - Gateway"
            },
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops16_alb_image",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-image/96bf3191e61d69ad",
            "arn_suffix": "app/loadbalancer-image/96bf3191e61d69ad",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancer-image-1777045049.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-image/96bf3191e61d69ad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancer-image",
            "security_groups": [
              "sg-046d2a145543e410b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065c5ae6ca355094a"
              },
              {
                "subnet_id": "subnet-07e1e59d8b19f4db8"
              }
            ],
            "subnets": [
              "subnet-065c5ae6ca355094a",
              "subnet-07e1e59d8b19f4db8"
            ],
            "tags": {
              "key": "Name",
              "value": "DEVOPS16 project - Load balancer image"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project",
              "key": "Name",
              "value": "DEVOPS16 project - Load balancer image"
            },
            "vpc_id": "vpc-0f05146ca7a0d8cf5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops16_alb_video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-video/a01656c284eb981d",
            "arn_suffix": "app/loadbalancer-video/a01656c284eb981d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancer-video-799992775.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-video/a01656c284eb981d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancer-video",
            "security_groups": [
              "sg-046d2a145543e410b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065c5ae6ca355094a"
              },
              {
                "subnet_id": "subnet-07e1e59d8b19f4db8"
              }
            ],
            "subnets": [
              "subnet-065c5ae6ca355094a",
              "subnet-07e1e59d8b19f4db8"
            ],
            "tags": {
              "key": "Name",
              "value": "DEVOPS16 project - Load balancer video"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project",
              "key": "Name",
              "value": "DEVOPS16 project - Load balancer video"
            },
            "vpc_id": "vpc-0f05146ca7a0d8cf5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops16_listener_image",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-image/96bf3191e61d69ad/b0908561da63fb10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-image/97127aa5ede94d92",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-image/96bf3191e61d69ad/b0908561da63fb10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-image/96bf3191e61d69ad",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops16_alb_image",
            "aws_lb_target_group.devops16_lb_tg_image",
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops16_listener_video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-video/a01656c284eb981d/63bab76d5b2a4412",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-video/ec7e92d819a625ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-video/a01656c284eb981d/63bab76d5b2a4412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/loadbalancer-video/a01656c284eb981d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops16_alb_video",
            "aws_lb_target_group.devops16_lb_tg_video",
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops16_listener_rule_image",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-image/97127aa5ede94d92",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/loadbalancer-image/96bf3191e61d69ad/b0908561da63fb10/0cae84bc29491edf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/image/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/loadbalancer-image/96bf3191e61d69ad/b0908561da63fb10/0cae84bc29491edf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-image/96bf3191e61d69ad/b0908561da63fb10",
            "priority": 99,
            "tags": null,
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops16_alb_image",
            "aws_lb_listener.devops16_listener_image",
            "aws_lb_target_group.devops16_lb_tg_image",
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops16_listener_rule_video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-video/ec7e92d819a625ed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/loadbalancer-video/a01656c284eb981d/63bab76d5b2a4412/c3187c26252d3dfc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*/videos*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/loadbalancer-video/a01656c284eb981d/63bab76d5b2a4412/c3187c26252d3dfc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/loadbalancer-video/a01656c284eb981d/63bab76d5b2a4412",
            "priority": 99,
            "tags": null,
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops16_alb_video",
            "aws_lb_listener.devops16_listener_video",
            "aws_lb_target_group.devops16_lb_tg_video",
            "aws_security_group.allow_all",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops16_lb_tg_image",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-image/97127aa5ede94d92",
            "arn_suffix": "targetgroup/targetgroup-image/97127aa5ede94d92",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-image/97127aa5ede94d92",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetgroup-image",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops16_lb_tg_video",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-video/ec7e92d819a625ed",
            "arn_suffix": "targetgroup/targetgroup-video/ec7e92d819a625ed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "matcher": "200-400",
                "path": "/videos/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/targetgroup-video/ec7e92d819a625ed",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetgroup-video",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:route-table/rtb-051152abd3b9c7aa7",
            "id": "rtb-051152abd3b9c7aa7",
            "owner_id": "942872595618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0ca2993d334c4a3",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0ca2993d334c4a3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEVOPS16 project - Route Table"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0876d4720e53d1808",
            "route_table_id": "rtb-051152abd3b9c7aa7",
            "subnet_id": "subnet-07e1e59d8b19f4db8"
          },
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_route_table.project-routetable",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b7cf594b8aaa9d2",
            "route_table_id": "rtb-051152abd3b9c7aa7",
            "subnet_id": "subnet-065c5ae6ca355094a"
          },
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_route_table.project-routetable",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:security-group/sg-046d2a145543e410b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046d2a145543e410b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_tracffic",
            "name_prefix": "",
            "owner_id": "942872595618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEVOPS16 project - Allow all"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - Allow all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:subnet/subnet-07e1e59d8b19f4db8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e1e59d8b19f4db8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942872595618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEVOPS16 project - subnet 1"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - subnet 1"
            },
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:subnet/subnet-065c5ae6ca355094a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c5ae6ca355094a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942872595618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEVOPS16 project - subnet 2"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - subnet 2"
            },
            "vpc_id": "vpc-0f05146ca7a0d8cf5"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:vpc/vpc-0f05146ca7a0d8cf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ffb5627064ba6ee",
            "default_route_table_id": "rtb-087c33ccf6e71d9ae",
            "default_security_group_id": "sg-066379658e6d4461a",
            "dhcp_options_id": "dopt-0be5f8c97d44f1ac1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f05146ca7a0d8cf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087c33ccf6e71d9ae",
            "owner_id": "942872595618",
            "tags": {
              "Name": "DEVOPS16 project - VPC"
            },
            "tags_all": {
              "Environment": "DEVOPS16 project",
              "Name": "DEVOPS16 project - VPC"
            }
          }
        }
      ]
    }
  ]
}